[tool.poetry]
name = "aco_google_app"
version = "0.1.0"
description = "The combination of Ant colony optimization (ACO) algorithm and Google maps API to find the shortest route"
authors = ["Viet-Dung Tran"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
